--- a/FontEnd/src/container/header.css
+++ b/FontEnd/src/container/header.css
@@ -169,7 +169,7 @@
     margin-top: 2px;
   }
 }
-@media only screen and (max-width: 414px) {
+@media only screen and (min-width: 376px) and (max-width: 414px) {
   .logo {
     display: none;
   }
