--- a/FontEnd/src/pages/productList/productList.css
+++ b/FontEnd/src/pages/productList/productList.css
@@ -145,6 +145,19 @@ body {
 .rightList {
   padding-right: 0px;
 }
+.radiusDelivery{
+  margin-top: 10px;
+  border-radius: 10px;
+}
+
+
+
+
+
+
+
+
+
 @media only screen and (max-width: 4096px) {
   .tagFilter {
     font-family: Open Sans, sans-serif;
@@ -227,7 +240,6 @@ body {
     background-color: rgb(6, 92, 179);
   }
 }
-
 @media only screen and (max-width: 1366px) {
   .tagFilter {
     font-family: Open Sans, sans-serif;
