--- a/FontEnd/src/pages/productDetail/productDetail.css
+++ b/FontEnd/src/pages/productDetail/productDetail.css
@@ -6,8 +6,10 @@
   background-color: white;
 }
 .paddingTopAndBottomContainerMain{
-  padding-top: 30px;
-  padding-bottom: 30px;
+  padding-top: 5px;
+  padding-bottom: 10px;
+  margin-top: 30px;
+  border-radius: 10px;
 }
 .paddingLeftContainerRight{
   margin-left: -12px;
@@ -85,10 +87,9 @@ h3{
   position: inherit;
 }
 .yellowStar{
-  padding-left: 5px;
+  padding-right: 3px;
   color: #FFC120;
-  font-size: 20px;
-  padding-right: 5px;
+  font-size: 15px;
 }
 .yellowAward{
   color: #FFC120;
@@ -197,6 +198,7 @@ p{
   border: 0.5px solid;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
+  padding-top: 3% !important;
 }
 .plusButton:hover{
   background-color: #379AF4;
@@ -210,6 +212,7 @@ p{
   border: 0.5px solid;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
+  padding-top: 3% !important;
 }
 .minusButton:hover{
   background-color: #379AF4;
@@ -219,12 +222,10 @@ p{
 }
 .plusText{
   font-size: 20px;
-  padding-top: 6px;
   text-align: center;
 }
 .minusText{
   font-size: 20px;
-  padding-top: 6px;
   text-align: center;
 }
 .textBoxSize{
@@ -232,7 +233,7 @@ p{
   border-color: #379AF4 !important;
   border: 0.5px solid;
   height: 35px;
-  padding-top: 2px;
+  padding-top: 2px !important;
   margin-left: -0.5px;
   margin-right: -1px;
   border-radius: 0%;
@@ -321,4 +322,16 @@ p{
   width: 30px;
   height: 80px;
 }
-
+.linePacing{
+  margin-bottom: 15px;
+}
+.nameProductPacing{
+  margin-bottom: 10px;
+  font-size: 30px;
+  font-weight: 300;
+  margin-top: 0px;
+}
+.ratingProductPacing{
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
