--- a/FontEndAdmin/src/views/shop/products/products.css
+++ b/FontEndAdmin/src/views/shop/products/products.css
@@ -79,3 +79,58 @@
   margin-right: 38px !important;
   margin-bottom: 10px;
 }
+.borderImgSize{
+  width: 100px;
+  height: 100px;
+  border: 1px solid rgb(177, 177, 177);
+  margin-right: 20px;
+  margin-bottom: 20px;
+  display: inline-table;
+  border-radius: 10px;
+  margin-top: 0px;
+}
+.borderImgSizeIcon{
+  width: 100px;
+  height: 100px;
+  border: 1px solid rgb(177, 177, 177);
+  margin-right: 20px;
+  margin-bottom: 20px;
+  display: inline-table;
+  border-radius: 10px;
+  margin-top: 20px;
+}
+.iconOnImgBorder{
+  display: table;
+  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  color: rgb(90, 148, 255);
+  cursor: pointer;
+}
+#upload-photo {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+}
+.imageOnTable{
+  width: 150px ;
+  height: auto;
+}
+.info{
+  color: #379AF4;
+  padding-left: 25px;
+  font-size: 22px;
+  margin-top: -5px;
+}
+.info:hover{
+  cursor: pointer;
+}
+.delete{
+  color: red;
+  padding-left: 25px;
+  font-size: 22px;
+  margin-top: -5px;
+}
+.delete:hover{
+  cursor: pointer;
+}
