--- a/FontEndAdmin/src/views/shop/products/products.css
+++ b/FontEndAdmin/src/views/shop/products/products.css
@@ -54,7 +54,10 @@
   padding-top: 5px;
 }
 .modalMaxWidth {
-  max-width: 1300px;
+  max-width: 1300px !important;
+}
+.modalImageMaxWidth {
+  max-width: 800px !important;
 }
 .textCenterModalTitle {
   text-align: center;
@@ -134,3 +137,26 @@
 .delete:hover{
   cursor: pointer;
 }
+
+.view{
+  color: #379AF4;
+}
+.view:hover{
+  cursor: pointer;
+  text-decoration-line: underline;
+}
+
+.carousel-control-prev:hover{
+  background-color: rgb(209, 209, 209);
+  opacity: 0.3;
+}
+.carousel-control-next:hover{
+  background-color: rgb(209, 209, 209);
+  opacity: 0.3;
+}
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+ }
+ .carousel-control-next-icon {
+   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+ }
