size ảnh trong App admin, xử lý filter bằng redux
size ảnh trong App admin, xử lý các filter bằng redux, chỉnh sửa lại gaio diện.

--- a/FontEnd/public/assets/css/style.css
+++ b/FontEnd/public/assets/css/style.css
@@ -300,9 +300,9 @@ a {
 }
 
 /* line 83, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_common.scss */
-a:hover {
+/* a:hover {
   color: #fff;
-}
+} */
 
 /* line 86, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_common.scss */
 a:focus,
@@ -3300,9 +3300,9 @@ input:focus {
 }
 
 /* line 1149, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_common.scss */
-.form-control:focus {
+:focus {
   color: #495057;
-  background-color: #fff;
+  /* background-color: #fff; */
   border-color: #dddddd;
   outline: 0;
   box-shadow: none;
@@ -3850,7 +3850,7 @@ input:focus {
 }
 
 /* line 348, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_headerMenu.scss */
-.header-area .nice-select {
+.header-area  {
   -webkit-tap-highlight-color: transparent;
   background-color: transparent;
   border-radius: 0;
@@ -3859,17 +3859,17 @@ input:focus {
 }
 
 /* line 355, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_headerMenu.scss */
-.header-area .nice-select .option:hover, .header-area .nice-select .option.focus, .header-area .nice-select .option.selected.focus {
+.header-area  .option:hover, .header-area  .option.focus, .header-area  .option.selected.focus {
   background-color: #00b1ff;
 }
 
 /* line 358, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_headerMenu.scss */
-.header-area .nice-select .list {
+.header-area  .list {
   background-color: #000;
 }
 
 /* line 361, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_headerMenu.scss */
-.header-area .nice-select::after {
+.header-area ::after {
   border-bottom: 1px solid #fff;
   border-right: 1px solid #fff;
   height: 7px;
@@ -4500,7 +4500,7 @@ input:focus {
 }
 
 /* line 117, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_latest_products.scss */
-.latest-product-area .nice-select {
+.latest-product-area  {
   -webkit-tap-highlight-color: transparent;
   background-color: transparent;
   border-radius: 0;
@@ -4509,17 +4509,17 @@ input:focus {
 }
 
 /* line 124, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_latest_products.scss */
-.latest-product-area .nice-select .option:hover, .latest-product-area .nice-select .option.focus, .latest-product-area .nice-select .option.selected.focus {
+.latest-product-area  .option:hover, .latest-product-area  .option.focus, .latest-product-area  .option.selected.focus {
   background-color: #00b1ff;
 }
 
 /* line 127, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_latest_products.scss */
-.latest-product-area .nice-select .list {
+.latest-product-area  .list {
   background-color: #fff;
 }
 
 /* line 130, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_latest_products.scss */
-.latest-product-area .nice-select::after {
+.latest-product-area ::after {
   border-bottom: 1px solid #333333;
   border-right: 1px solid #333333;
   height: 7px;
@@ -5885,7 +5885,7 @@ input:focus {
 }
 
 /* line 672, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_blog_page.scss */
-.blog_right_sidebar .search_widget .form-control {
+.blog_right_sidebar .search_widget  {
   height: 50px;
   border-color: #f0e9ff;
   font-size: 13px;
@@ -5896,12 +5896,12 @@ input:focus {
 }
 
 /* line 681, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_blog_page.scss */
-.blog_right_sidebar .search_widget .form-control::placeholder {
+.blog_right_sidebar .search_widget ::placeholder {
   color: #999999;
 }
 
 /* line 685, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_blog_page.scss */
-.blog_right_sidebar .search_widget .form-control:focus {
+.blog_right_sidebar .search_widget :focus {
   border-color: #f0e9ff;
   outline: 0;
   box-shadow: none;
@@ -5929,7 +5929,7 @@ input:focus {
 }
 
 /* line 716, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_blog_page.scss */
-.blog_right_sidebar .newsletter_widget .form-control {
+.blog_right_sidebar .newsletter_widget  {
   height: 50px;
   border-color: #f0e9ff;
   font-size: 13px;
@@ -5939,12 +5939,12 @@ input:focus {
 }
 
 /* line 725, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_blog_page.scss */
-.blog_right_sidebar .newsletter_widget .form-control::placeholder {
+.blog_right_sidebar .newsletter_widget ::placeholder {
   color: #999999;
 }
 
 /* line 729, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_blog_page.scss */
-.blog_right_sidebar .newsletter_widget .form-control:focus {
+.blog_right_sidebar .newsletter_widget :focus {
   border-color: #f0e9ff;
   outline: 0;
   box-shadow: none;
@@ -6562,7 +6562,7 @@ input:focus {
 }
 
 /* line 1448, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_blog_page.scss */
-.comment-form .form-control {
+.comment-form  {
   border: 1px solid #f0e9ff;
   border-radius: 5px;
   height: 48px;
@@ -6572,19 +6572,19 @@ input:focus {
 }
 
 /* line 1456, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_blog_page.scss */
-.comment-form .form-control:focus {
+.comment-form :focus {
   outline: 0;
   box-shadow: none;
 }
 
 /* line 1461, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_blog_page.scss */
-.comment-form .form-control::placeholder {
+.comment-form ::placeholder {
   font-weight: 300;
   color: #999999;
 }
 
 /* line 1466, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_blog_page.scss */
-.comment-form .form-control::placeholder {
+.comment-form ::placeholder {
   color: #777777;
 }
 
@@ -6688,7 +6688,7 @@ input:focus {
 }
 
 /* line 61, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_contact.scss */
-.form-contact .form-control {
+.form-contact  {
   border: 1px solid #e5e6e9;
   border-radius: 0px;
   height: 48px;
@@ -6698,13 +6698,13 @@ input:focus {
 }
 
 /* line 69, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_contact.scss */
-.form-contact .form-control:focus {
+.form-contact :focus {
   outline: 0;
   box-shadow: none;
 }
 
 /* line 74, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_contact.scss */
-.form-contact .form-control::placeholder {
+.form-contact ::placeholder {
   font-weight: 300;
   color: #999999;
 }
@@ -6895,7 +6895,7 @@ input:focus {
 }
 
 /* line 67, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_bradcam.scss */
-.popup_box .nice-select {
+.popup_box  {
   -webkit-tap-highlight-color: transparent;
   background-color: #fff;
   /* border-radius: 5px; */
@@ -6932,7 +6932,7 @@ input:focus {
 }
 
 /* line 101, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_bradcam.scss */
-.popup_box .nice-select::after {
+.popup_box ::after {
   content: "\f0d7";
   display: block;
   height: 5px;
@@ -6949,7 +6949,7 @@ input:focus {
 }
 
 /* line 116, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_bradcam.scss */
-.popup_box .nice-select.open .list {
+.popup_box .open .list {
   opacity: 1;
   pointer-events: auto;
   -webkit-transform: scale(1) translateY(0);
@@ -6960,7 +6960,7 @@ input:focus {
 }
 
 /* line 125, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_bradcam.scss */
-.popup_box .nice-select.list {
+.popup_box .list {
   height: 200px;
   overflow-y: scroll;
 }
@@ -8215,7 +8215,7 @@ del {
 }
 
 /* line 969, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
-.default-select .nice-select {
+.default-select  {
   border: none;
   border-radius: 0px;
   height: 40px;
@@ -8225,7 +8225,7 @@ del {
 }
 
 /* line 976, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
-.default-select .nice-select .list {
+.default-select  .list {
   margin-top: 0;
   border: none;
   border-radius: 0px;
@@ -8235,7 +8235,7 @@ del {
 }
 
 /* line 983, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
-.default-select .nice-select .list .option {
+.default-select  .list .option {
   font-weight: 300;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -8248,13 +8248,13 @@ del {
 }
 
 /* line 990, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
-.default-select .nice-select .list .option.selected {
+.default-select  .list .option.selected {
   color: #222222;
   background: transparent;
 }
 
 /* line 994, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
-.default-select .nice-select .list .option:hover {
+.default-select  .list .option:hover {
   color: #222222;
   background: transparent;
 }
@@ -8266,7 +8266,7 @@ del {
 }
 
 /* line 1005, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
-.default-select .nice-select::after {
+.default-select ::after {
   right: 20px;
 }
 
@@ -8277,7 +8277,7 @@ del {
 }
 
 /* line 1013, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
-.form-select .nice-select {
+.form-select  {
   border: none;
   border-radius: 0px;
   height: 40px;
@@ -8288,7 +8288,7 @@ del {
 }
 
 /* line 1021, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
-.form-select .nice-select .list {
+.form-select  .list {
   margin-top: 0;
   border: none;
   border-radius: 0px;
@@ -8298,7 +8298,7 @@ del {
 }
 
 /* line 1028, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
-.form-select .nice-select .list .option {
+.form-select  .list .option {
   font-weight: 300;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -8311,13 +8311,13 @@ del {
 }
 
 /* line 1035, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
-.form-select .nice-select .list .option.selected {
+.form-select  .list .option.selected {
   color: #222222;
   background: transparent;
 }
 
 /* line 1039, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
-.form-select .nice-select .list .option:hover {
+.form-select  .list .option:hover {
   color: #222222;
   background: transparent;
 }
@@ -8329,7 +8329,7 @@ del {
 }
 
 /* line 1050, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_elements.scss */
-.form-select .nice-select::after {
+.form-select ::after {
   right: 20px;
 }
 
@@ -9967,7 +9967,7 @@ input:focus {
 }
 
 /* line 249, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-.product_bar_single .nice-select {
+.product_bar_single  {
   background-color: #fff;
   text-transform: capitalize;
   border: 1px solid #eee;
@@ -9979,7 +9979,7 @@ input:focus {
 }
 
 /* line 258, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-.product_bar_single .nice-select:after {
+.product_bar_single :after {
   height: 8px;
   margin-top: -6px;
   right: 16px;
@@ -10186,7 +10186,7 @@ input:focus {
 }
 
 /* line 460, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-.product_top_bar .single_product_menu .nice-select {
+.product_top_bar .single_product_menu  {
   height: 0;
   border: 0px;
   line-height: 15px;
@@ -10195,7 +10195,7 @@ input:focus {
 }
 
 /* line 467, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-.product_top_bar .single_product_menu .nice-select:after {
+.product_top_bar .single_product_menu :after {
   margin-top: 0;
   border-bottom: 1px solid #999;
   border-right: 1px solid #999;
@@ -10224,7 +10224,7 @@ input:focus {
 }
 
 /* line 492, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-.product_top_bar .single_product_menu .input-group .form-control {
+.product_top_bar .single_product_menu .input-group  {
   border: 0px solid transparent;
   border-bottom: 1px solid #ddd;
   border-radius: 0;
@@ -10330,7 +10330,7 @@ input:focus {
     margin-right: 5px;
   }
   /* line 588, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-  .product_bar_single .nice-select {
+  .product_bar_single  {
     padding-left: 15px;
     padding-right: 35px;
   }
@@ -10839,7 +10839,7 @@ input:focus {
 }
 
 /* line 1074, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-.review_box .form-control {
+.review_box  {
   height: 50px;
   border-radius: 0;
 }
@@ -11193,18 +11193,18 @@ input:focus {
 }
 
 /* line 1395, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-.checkout_area .form-control {
+.checkout_area  {
   font-size: 14px;
   height: 40px;
 }
 
 /* line 1400, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-.checkout_area .form-control {
+.checkout_area  {
   border: 1px solid #eee;
 }
 
 /* line 1403, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-.checkout_area .form-control :focus {
+.checkout_area  :focus {
   color: #495057;
   background-color: #fff;
   border: 1px solid #ced4da;
@@ -11213,7 +11213,7 @@ input:focus {
 }
 
 /* line 1412, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-.checkout_area .form-control .form-control input {
+.checkout_area   input {
   height: 50px;
 }
 
@@ -11957,14 +11957,14 @@ input:focus {
 }
 
 /* line 2004, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-.login_part .login_part_form .form-control {
+.login_part .login_part_form  {
   border: 0px solid transparent;
   border-bottom: 1px solid #dddddd !important;
   border-radius: 0;
 }
 
 /* line 2008, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_product.scss */
-.login_part .login_part_form .form-control ::placeholder {
+.login_part .login_part_form  ::placeholder {
   color: #c3c3c3;
 }
 
@@ -12416,9 +12416,9 @@ input:focus {
 
 /************ shipping details css here **************/
 /* line 2, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_shipping_details.scss */
-.shipping_details {
+/* .shipping_details {
   background-color: #fff;
-}
+} */
 
 @media (max-width: 991px) {
   /* line 4, ../../SAIFUL/Running_project/250 eCommerce_HTML/250 eCommerce_HTML/250 eCommerce_HTML/assets/scss/_shipping_details.scss */
