--- a/FontEnd/src/pages/checkout/checkout.css
+++ b/FontEnd/src/pages/checkout/checkout.css
@@ -22,6 +22,7 @@
 }
 .selectBoxAddress{
     width: 100% !important;
+    display: inline !important;
 }
 .addressDetailHeight{
     /* height: 100px !important; */
@@ -159,4 +160,10 @@
 .finalTotal{
     padding-bottom: 10px;
 
+}
+
+
+/* Ẩn thuốc tính không cần thiết */
+.nice-select{
+    display: none !important;
 }
