--- a/FontEndAdmin/src/views/shop/products/products.css
+++ b/FontEndAdmin/src/views/shop/products/products.css
@@ -59,6 +59,23 @@
 .modalImageMaxWidth {
   max-width: 800px !important;
 }
+.modalSizeMaxWidth {
+  max-width: 1200px !important;
+  max-height: 700px !important;
+}
+
+.sizeNameTable{
+  text-align: center;
+  font-size: 22px;
+  font-weight: 600;
+  margin-top: 5px;
+  margin-bottom: 20px;
+
+
+}
+
+
+
 .textCenterModalTitle {
   text-align: center;
   font-size: 20px;
@@ -166,4 +183,31 @@
  }
  .carousel-control-next-icon {
    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+ }
+
+
+ /* scrollable table */
+.th_Sticky{
+  position: sticky;
+  top: 0;
+  background-color: white;
+}
+.tbl-header{
+  height: 500px;
+  overflow-y: scroll;
+}
+
+ .nameTitleSize{
+   font-size: 26px;
+   font-weight: 600;
+   text-align: center;
+   margin-top: 25px;
+   margin-bottom: 15px;
+ }
+ .trashOnTableSize{
+   color: rgb(255, 70, 70);
+   font-size: 18px;
+ }
+ .trashOnTableSize:hover{
+   cursor: pointer;
  }
